--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 language: rust
+dist: bionic
+addons:
+  apt:
+    packages:
+    - libssl-dev
 cache: cargo
 rust:
   - stable
@@ -18,4 +23,5 @@ script: |
   cargo test &&
   cargo audit
 after_success: |
-  cargo tarpaulin --ignore-tests
+  cargo tarpaulin --ignore-tests --out Xml
+  bash <(curl -s https://codecov.io/bash)
