--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,21 @@ addons:
     - libssl-dev
 cache: cargo
 rust:
-  - stable
+- stable
+services:
+- postgresql
+env:
+- DATABASE_URL="postgres://postgres:@localhost:5432/newsletter"
 before_cache: |
   cargo install cargo-tarpaulin
 before_script:
 - rustup component add rustfmt
 - rustup component add clippy
 - cargo install cargo-audit
+- cargo install --vers 0.5.7 sqlx-cli --no-default-features --features postgres
+- sqlx database create
+- sqlx migrate run
+- cp ./ci/config.yaml config.yaml
 # As a result of https://github.com/travis-ci/travis-ci/issues/1066, we run
 # everything in one large command instead of multiple commands.
 # In this way, the build stops immediately if one of the commands fails.
