--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,11 @@ rust:
 services:
 - postgresql
 env:
-- DATABASE_URL="postgres://postgres:@localhost:5432/newsletter"
+- DATABASE_URL="postgres://postgres:@127.0.0.1:5432/newsletter"
 before_cache: |
   cargo install cargo-tarpaulin
 before_script:
+- psql -c 'create database newsletter;' -U postgres
 - rustup component add rustfmt
 - rustup component add clippy
 - cargo install cargo-audit
