--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,9 @@ before_cache: |
   cargo install cargo-tarpaulin
 before_script:
 - psql -c 'create database newsletter;' -U travis -p 5433
-- rustup component add rustfmt
-- rustup component add clippy
-- cargo install cargo-audit
+# - rustup component add rustfmt
+# - rustup component add clippy
+# - cargo install cargo-audit
 - cargo install --vers 0.5.7 sqlx-cli --no-default-features --features postgres
 - sqlx database create
 - sqlx migrate run
@@ -32,11 +32,14 @@ before_script:
 # everything in one large command instead of multiple commands.
 # In this way, the build stops immediately if one of the commands fails.
 script: |
-  cargo fmt --all -- --check &&
-  cargo clippy -- -D warnings &&
   cargo build &&
-  cargo test &&
-  cargo audit
+  cargo test
+# script: |
+#   cargo fmt --all -- --check &&
+#   cargo clippy -- -D warnings &&
+#   cargo build &&
+#   cargo test &&
+#   cargo audit
 after_success: |
   cargo tarpaulin --ignore-tests --out Xml
   bash <(curl -s https://codecov.io/bash)
