--- a/.travis.yml
+++ b/.travis.yml
@@ -27,26 +27,22 @@ before_script:
 - "if [ ! -z $PGVERSION ]; then sudo cp /etc/postgresql/{9.6,$PGVERSION}/main/pg_hba.conf; fi"
 - "if [ ! -z $PGVERSION ]; then sudo service postgresql restart $PGVERSION; fi"
 - sh -c 'until pg_isready -p 5433; do echo "Waiting for the DB to be up..."; sleep 2; done'
-- psql -c 'create database newsletter;' -U travis -p 5433
-# - rustup component add rustfmt
-# - rustup component add clippy
-# - cargo install cargo-audit
 - cargo install --vers 0.5.7 sqlx-cli --no-default-features --features postgres
 - sqlx database create
 - sqlx migrate run
 - cp ./ci/config.yaml config.yaml
+- rustup component add rustfmt
+- rustup component add clippy
+- cargo install cargo-audit
 # As a result of https://github.com/travis-ci/travis-ci/issues/1066, we run
 # everything in one large command instead of multiple commands.
 # In this way, the build stops immediately if one of the commands fails.
 script: |
+  cargo fmt --all -- --check &&
+  cargo clippy -- -D warnings &&
   cargo build &&
-  cargo test
-# script: |
-#   cargo fmt --all -- --check &&
-#   cargo clippy -- -D warnings &&
-#   cargo build &&
-#   cargo test &&
-#   cargo audit
+  cargo test &&
+  cargo audit
 after_success: |
   cargo tarpaulin --ignore-tests --out Xml
   bash <(curl -s https://codecov.io/bash)
