--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ rust:
 services:
 - postgresql
 before_cache: |
-  cargo install cargo-tarpaulin --avoid-cfg-tarpaulin
+  cargo install cargo-tarpaulin
 before_script:
 - "if [ ! -z $PGVERSION ]; then sudo cp /etc/postgresql/{9.6,$PGVERSION}/main/pg_hba.conf; fi"
 - "if [ ! -z $PGVERSION ]; then sudo service postgresql restart $PGVERSION; fi"
@@ -44,5 +44,5 @@ script: |
   cargo test &&
   cargo audit
 after_success: |
-  cargo tarpaulin --ignore-tests --out Xml
+  cargo tarpaulin --avoid-cfg-tarpaulin --ignore-tests --out Xml
   bash <(curl -s https://codecov.io/bash)
