--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"]
 tracing-bunyan-formatter = "0.2.5"
 tracing-log = "0.1.2"
 tracing-actix-web = "0.4.0-beta.8"
+serde-aux = "2.2.0"
 
 [dependencies.sqlx]
 version = "0.5.7"
@@ -34,7 +35,8 @@ features = [
     "postgres",
     "uuid",
     "chrono",
-    "migrate"
+    "migrate",
+    "offline"
 ]
 
 [dev-dependencies]
