--- a/config/production.yaml
+++ b/config/production.yaml
@@ -2,9 +2,4 @@ application:
   host: 0.0.0.0
   port: 8000
 database:
-  host: "localhost"
-  port: 5432
-  username: "postgres"
-  password: "password"
-  database_name: "newsletter"
-  require_ssl: false
+  require_ssl: true
